<resources>
    <string name="app_name">Gestion de Factures</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    //String relatives au list_items_model
    <string name="numero">n° :</string>
    <string name="price">prix :</string>
    <string name="date"> date :</string>
    <string name="type"> type :</string>
    <string name="btnPayer">Payer</string>

    //String relatives aux boutons de AjouterFActureActivity
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="head">FACTURE</string>

    //Ancien projet
    <string name="connection">Connection</string>
    <string name="login">Login :</string>
    <string name="login_edit"> </string>
    <string name="password">Password :</string>
    <string name="home">Accueil</string>
    <string name="buyed_bills">Buyed Bills</string>
    <string name="no_buyed_bills">No Buyed Bills</string>
    <string name="saved_bills">Saved Bills</string>
    <string name="help">Help</string>
    <string name="textview">TextView</string>
    <string name="btn_connection">Connect you</string>
    <string name="btn_signup">Sign up</string>
    <string name="error_fields">Required Fields</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="title_activity">Activity</string>
    <string name="new_">New :</string>
    <string name="confirm_password">Confirm :</string>
    <string name="modify_compte">Modify compte</string>
    <string name="new_login">New login</string>
    <string name="old_login">Old login</string>
    <string name="factures_eau">Water bill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_fact">Create Facture</string>

    <string name="delete">Supprimer</string>
</resources>