<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gestion_de_factures.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_nonpayee"
        android:name="com.example.gestion_de_factures.Fragments.NonPayeeFragment"
        android:label="@string/no_buyed_bills"
        tools:layout="@layout/fragment_non_payee" />

    <fragment
        android:id="@+id/nav_payee"
        android:name="com.example.gestion_de_factures.Fragments.PayeeFragment"
        android:label="@string/buyed_bills"
        tools:layout="@layout/fragment_payee" />

    <fragment
        android:id="@+id/nav_compte"
        android:name="com.example.gestion_de_factures.Fragments.ProfilFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.gestion_de_factures.Fragments.AideFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_aide" />

    <fragment
        android:id="@+id/nav_deconnexion"
        android:name="com.example.gestion_de_factures.Fragments.DeconnexionFragment"
        android:label="Deconnexion"
        tools:layout="@layout/fragment_deconnexion" />

</navigation>