<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_nonpayee"
            android:icon="@drawable/ic_no_buyed_bills"
            android:title="@string/no_buyed_bills" />

        <item
            android:id="@+id/nav_payee"
            android:icon="@drawable/ic_buyed_bills"
            android:title="@string/buyed_bills" />

        <item
            android:id="@+id/nav_compte"
            android:icon="@drawable/ic_login"
            android:title="Compte" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="Aide" />



    </group>
</menu>