<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ajouterFacture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CreerFactureActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="15sp"
        app:contentPadding="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/orange_clair"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/head"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="69dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/contour_edit"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="6dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/numero">

                </TextView>

                <EditText
                    android:id="@+id/edtNumeroFact"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:labelFor="@+id/edtNumeroFact"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="68dp"
                android:gravity="center_vertical"
                android:background="@drawable/contour_edit"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="13dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/type">

                </TextView>

                <Spinner
                    android:id="@+id/SpinnerTypeFact"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:minHeight="48dp">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="73dp"
                android:gravity="center_vertical"
                android:background="@drawable/contour_edit"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/price">

                </TextView>

                <EditText
                    android:id="@+id/edtPrixFact"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="indiquer le montant"
                    android:ems="10"
                    android:minHeight="48dp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="74dp"
                android:gravity="center_vertical"
                android:background="@drawable/contour_edit"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/date">

                </TextView>

                <EditText
                    android:id="@+id/edtDateFact"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:hint="indiquer la date limite"
                    android:layout_weight="1"
                    android:ems="10"
                    android:minHeight="48dp"
                    >

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnEnregistrer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contour_edit"
                    android:layout_marginBottom="10dp"
                    android:text="@string/save"
                    tools:ignore="TextContrastCheck">

                </Button>

                <Button
                    android:id="@+id/btnAnnuler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contour_edit"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cancel"
                    tools:ignore="TextContrastCheck">

                </Button>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>