<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtlogincreate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:background="@drawable/contour_edit_plein"
        android:hint="@string/login"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/contour_edit_plein"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtlogincreate"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".8">

    </EditText>

    <EditText
        android:id="@+id/edtconfirmpassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/contour_edit_plein"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".8"
        tools:layout_editor_absoluteY="375dp">

    </EditText>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="486dp"
        android:background="@drawable/contour_edit"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Créer"
        android:textSize="@dimen/title"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="321dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/contour_edit"
        android:backgroundTint="@color/gris"
        android:text="Annuler"
        android:textSize="@dimen/title"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="574dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>